@@ -1,3 +1,4 @@
+2015-06-17 Fixed issue with MathJax in Memo Game module
 2015-06-17 Added changes in Fractions module
 2015-06-16 Added changes in Figure Drawing module
 2015-06-16 Fixed issue with dragging in SourceList and ImageSource modules
